<resources>

    <string name="app_name">海星游戏</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    
    
	<string name="activity_remote_service_binding">AppDemo4</string>
	<string name="remote_call_failed">Failure calling remote service</string>
       
	<string name="partnerHint">"partner"</string>
	<string name="sellerHint">"seller"</string>
	<string name="out_trade_noHint">"out_trade_no"</string>
	<string name="subjectHint">"subject"</string>
	<string name="bodyHint">"body"</string>
	<string name="total_feeHint">"total_fee"</string>
	<string name="notify_urlHint">"notify_url"</string>
	<string name="charsetHint">"charset"</string>
	<string name="signTypeHint">"signType"</string>
	<string name="notify">提示</string>
	<string name="notice_no_account">您還沒有登入過賬號</string>
	<string name="confirm_install_hint">"安装提示"</string>	
	<string name="confirm_install">"为保证您的交易安全，需要您安装支付宝安全支付服务，才能进行付款。\n\n点击确定，立即安装。"</string>
	<string name="ensure">"確定"</string>
	<!-- <string name="cancel">"取消"</string> -->
	<string name="check_sign_failed">您的订单信息已被非法篡改。</string> 
	<string name="net_fail">網絡異常登入失敗</string> 
	<string name="net_register_fail">網絡異常註冊失敗</string>
	<string name="net_bing_fail">網絡異常綁定失敗</string>
	<string name="bing_success">綁定成功</string>
	<string name="bing_failed">綁定失敗</string>
	<string name="login_fail">登录失败,</string> 
	<string name="account_not_empty">賬號不能為空</string> 
	<string name="password_not_empty">密碼不能為空</string> 
	<string name="account_invalid">賬號格式不正確</string> 
	<string name="password_invalid">密碼格式不正確</string> 
	<string name="email_invalid">郵箱格式不正確</string> 
	<string name="email_bind">郵箱綁定</string> 
	<string name="password_find">密碼找回</string> 
	<string name="register_fail">注册失败</string> 
	<string name="register_success">注册成功</string> 
	<string name ="welcome">，歡迎您回來 ！</string>
	<string name="oldpassword">请填写原密码</string>
	<string name="newpassword">请填写新密码</string>
	<string name="account_pw">帐号: </string>
	<string name="notify_bind">账号绑定提示</string>
	<string name="modify_success">密码修改成功</string>
	<string name="modify_failed">密码修改失败</string>
	<string name="guest_failed">试玩账号创建失败</string>
	<string name="guest_success">试玩账号创建成功</string>
	<string name="account_modifyPsw">修改密码</string> 
	<string name="account_accountControl">切换账号</string> 
		<string name="facebook_bind">Facebook綁定</string> 
			<string name="google_bind">google綁定</string> 
	 <string-array name="control" >  
        <item>通行证管理</item>  
        <item>游戏官网</item>  
        <item>切换用户</item>  
    </string-array>  
	 
	 
	<!-- 脚踏实地字符 -->
	<string name="title_top">海星遊戲</string>
	<string name="title_foxgame">海星遊戲</string>
	<string name="title_back">返回</string>
	<string name="title_login">登 入</string>
	<string name="title_guest">試 玩</string>
	<string name="title_ok">完成</string>
    <string name="title_change_pass">修 改 密 碼</string>
    <string name="nowpass">原密碼:</string>
    <string name="newpass">新密碼:</string>
    <string name="inputold">输入原密码</string>
    <string name="inputnew">输入旧密码</string>
    <string name="change_pass">修改密码</string>
    <string name="title_man">帐号中心</string>
    <string name="sub_title_userman">通行證管理</string>
	<string name="sub_title_bbs">游戏官网</string>
	<string name="sub_title_logout">注销</string>
	<string name="select_pay">选择充值方式</string>
	<string name="payali">快捷支付</string>
	<string name="paytencent">财付通</string>
	<string name="payyinlian">银行卡</string>
	<string name="pay_chongcard">充值卡</string>
	
	<string name="title_register">賬 號 註 冊</string>
	<string name="title_guests">試 玩 賬 號</string>
	<string name="regist_name">帐号：</string>
	<string name="regist_pass">密码：</string>
	<string name="regist_email">邮箱：</string>
	<string name="regist_enter">註       冊</string>
	<string name="regist_tv">您可以输入邮箱、字母/数字作为通行证帐号,\n也可以使用系统为您默认分配的帐号</string>
	<string name="user_delete">删除</string>
	<string name="user_loined"> 本機已經登入賬號</string>
	<string name="user_account">賬   號：</string>
	<string name="user_password">密  碼：</string>
	<string name="logout">註 銷</string>
	<string name="user_other_login">切換賬號</string>
	<string name="user_forgetpass">忘記密碼,請聯繫客服</string>
	<string name="user_other">用其他賬號登入</string>
	<string name="user_kefu">客服QQ:</string>
	<string name ="kefu">客服qq：</string>
	<string name = "worktime">周一到周六10:00-20:00</string>
	<string name="user_findpass">点击这里找回</string>
	<string name="close">關閉</string>
	<string name="user_bind_account">您现在正使用试玩帐号登录,\n以免丢失</string>
	<string name="user_bang">綁定</string>
	<string name="pay_web">網頁支付</string>
	<string name="pay_shenzhou">神州支付</string>
	<string name="pay_umpay">银联支付</string>
	<string name="pay_alipayQuick">快捷支付</string>
	
	<string name="pay_umpay_trust">信用卡支付</string>
	<string name="use_protocol">使用条款</string>
	<string name="rightbtn">右按钮</string>
	<string name="choosewrite">选填</string>
	<string name="user_email">邮 箱 ：</string>
	<string name="registerpass">密 码：</string>
	<string name="writelimit">6-12個字母或數字</string>
	<string name="payuser">充值帐号：</string>
	<string name="payproduct">订购商品</string>
	<string name="payprice">充值金额</string>
	<string name="paygame">充值游戏</string>
	<string name="paything">订购商品:</string>
	<string name="payprompt">温馨提示：1元人民币对应10钻石</string>
	<string name="custom_phone">客服热线</string>
	<string name="custom_time">服务时间：10:00-22:00</string>
	<string name="foxgameweb">官方网站：www.foxgame.com.cn</string>
	<string name="userreadpro">我已经阅读并统一遵守脚踏实地社区服务器条款</string>
	<string name="findpasschoose">选填 找回密码</string></resources>
