<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/u2_account_man"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/login_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                style="@style/u2_option_reg_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp"
                android:text="@string/sub_title_userman"
                android:textColor="@color/TextColorBlack" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/u2_account_update_pass"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="17dp"
                android:background="@drawable/user_updateltext"
                android:text="@string/title_change_pass"
                android:textColor="@color/TextColorBlack"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/u2_account_find_pass"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="17dp"
                android:background="@drawable/user_findltext"
                android:text="@string/password_find"
                android:textColor="@color/TextColorBlack"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/u2_account_bind_email"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="17dp"
                android:background="@drawable/user_emailtext"
                android:text="@string/email_bind"
                android:textColor="@color/TextColorBlack"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/u2_account_bind_google"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="17dp"
                android:background="@drawable/login_in"
                android:text="@string/google_bind"
                android:textColor="@color/TextColorBlack"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/u2_account_bind_facebook"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="17dp"
                android:background="@drawable/login_in"
                android:text="@string/facebook_bind"
                android:textColor="@color/TextColorBlack"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>