<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/u2_account_bind_layout_portrait"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
    <!-- 标题栏 -->

    

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="290dp"
             android:layout_marginTop="30dp"
            android:background="@drawable/login_bg"
            android:gravity="center_horizontal"
            android:orientation="vertical" >
            
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_below="@+id/u2_title_bar_layout"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

             <!-- 图标 -->
		<LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="50dp"
		    android:orientation="vertical" 
		    android:layout_marginLeft="3dp"
		    android:layout_marginRight="3dp"
		    >

		    <ImageView
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="5dp"
		        android:layout_marginLeft="6dp"
		        android:layout_marginTop="5dp"
		        android:visibility="visible" />
		</LinearLayout>

            <!-- 通行证、密码 -->

			<RelativeLayout 
			    android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:background="@drawable/login_main"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:orientation="vertical" >

                <!-- 通行证 -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="45dp"
					android:layout_marginRight="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >
                    <AutoCompleteTextView
                        android:id="@+id/u2_account_bind"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:maxLength="16"
                        android:inputType="textAutoComplete"
                        style="@style/u2_option_text_style"
                        android:singleLine="true"
                        android:hint="@string/writelimit"
                        android:nextFocusDown="@+id/u2_account_login_password"
                        android:imeOptions="actionNext"
                        >
                    </AutoCompleteTextView>
                    <ImageView
                        android:id="@+id/quickdelete"
                        android:src="@drawable/ic_dial_action_delete"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_marginRight="4dp"
                        android:visibility="invisible"
                         >
                    	</ImageView>
					 
                </LinearLayout>

                <!-- 密码 -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="45dp"
					android:layout_marginRight="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/u2_account_bind_password"
                        android:layout_width="match_parent"
                        style="@style/u2_option_edittext_style"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:maxLines="12"
                         android:password="true"
                        android:imeOptions="actionDone"
                        android:hint="@string/writelimit"
                        android:singleLine="true" >
                    </EditText>
                    <ImageView
                        android:id="@+id/quickdel_pass"
                        android:src="@drawable/ic_dial_action_delete"
                        android:layout_marginRight="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:visibility="invisible"
                         >
                    	</ImageView>
                    	
                </LinearLayout>

            </LinearLayout>
            <ProgressBar
			    android:id="@+id/loadingbar"
			    android:visibility="gone"
			    android:layout_centerInParent="true"
			    style="?android:attr/progressBarStyleLarge"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" />
			</RelativeLayout>
            
            <!-- 注册/登录 -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/u2_account_bind_btn"
                    android:layout_width="140dp"
                    android:background="@drawable/login_reg"
                    android:layout_height="30dp"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="5dp"
                    android:textColor="@color/TextColorBlack"
                    android:text="@string/user_bang">
                </Button>

                <Button
                    android:id="@+id/u2_account_other_login"
                    android:layout_width="140dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/login_reg"
                    android:text="@string/user_other_login"
                    android:textColor="@color/TextColorBlack"
                    android:textSize="16sp" />

            </LinearLayout>

            </LinearLayout>

             

            <!-- 忘记密码 -->
            
             
            
        </LinearLayout>

</RelativeLayout>